[gd_scene load_steps=8 format=3 uid="uid://b44rvv0tp2xdk"]

[ext_resource type="PackedScene" uid="uid://cl05a212n8cuh" path="res://scenes/paddle.tscn" id="1_ufpxh"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_vrwkt"]
[ext_resource type="PackedScene" uid="uid://blb5uxqt85nqb" path="res://scenes/ball.tscn" id="2_xp216"]
[ext_resource type="PackedScene" uid="uid://b3qu1jvndiq5d" path="res://ui/ui.tscn" id="4_bg5d8"]
[ext_resource type="Script" path="res://managers/score_manager.gd" id="5_uqa77"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5ijo"]
size = Vector2(1036, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_susd2"]
size = Vector2(33, 543)

[node name="Main" type="Node2D"]
script = ExtResource("1_vrwkt")
ball_scene = ExtResource("2_xp216")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 657.0
color = Color(0, 0, 0, 1)

[node name="PlayerOne" parent="." instance=ExtResource("1_ufpxh")]
position = Vector2(137, 88)

[node name="PlayerTwo" parent="." instance=ExtResource("1_ufpxh")]
position = Vector2(990, 88)
player = "p2"

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(586, 74)
shape = SubResource("RectangleShape2D_h5ijo")

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(538, 640)
shape = SubResource("RectangleShape2D_h5ijo")

[node name="Goals" type="Node2D" parent="."]

[node name="PlayerOneGoal" type="Area2D" parent="Goals"]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/PlayerOneGoal"]
position = Vector2(117, 357.5)
shape = SubResource("RectangleShape2D_susd2")

[node name="PlayerTwoGoal" type="Area2D" parent="Goals"]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/PlayerTwoGoal"]
position = Vector2(1036, 357.5)
shape = SubResource("RectangleShape2D_susd2")

[node name="UI" parent="." node_paths=PackedStringArray("score_manager") instance=ExtResource("4_bg5d8")]
score_manager = NodePath("../ScoreManager")

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource("5_uqa77")

[connection signal="body_entered" from="Goals/PlayerOneGoal" to="." method="_on_player_one_goal_body_entered"]
[connection signal="body_entered" from="Goals/PlayerTwoGoal" to="." method="_on_player_two_goal_body_entered"]
